--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/ssr": "^20.0.3",
     "@ng-bootstrap/ng-bootstrap": "^19.0.0",
     "bootstrap": "^5.3.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
